kube/network/example.yml
# A funny policy to let web app pods talk to each other
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: web
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
# This is already implied:
# Targets the same namespace as the pod for which we are writing the policy.
#        - namespaceSelector:
#            matchLabels:
#              kubernetes.io/metadata.name: default
          - podSelector:
              matchLabels:
                app: web
      ports:
        - protocol: TCP
          port: 8090
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: web
      ports:
        - protocol: TCP
          port: 8090
